# online-pharmacy/routes/products.js
@@ -1,5 +1,6 @@
 import express from 'express';
 import Product from '../models/Product.js';
+import Category from '../models/Category.js';
 import auth from '../middleware/auth.js';
 import uploadProductImage from '../middleware/uploadProductImage.js';
 import { Types } from 'mongoose';
@@ -30,11 +31,19 @@ router.post('/', auth, async (req, res) => {
   }
 });
 
+router.get('/all_productss', async (req, res) => {
+  try {
+    const products = await Product.find(); // Fetch all products from DB
+    res.json(products); // Send products as JSON response
+  } catch (err) {
+    res.status(500).send('Server Error');
+  }
+});
 
 router.get('/all_products', async (req, res) => {
   try {
     // Extract query parameters
-    const { category, minPrice, maxPrice, sortBy, page = 1, pageSize = 10 } = req.query;
+    const { category, minPrice, maxPrice, sortBy, page = 1, pageSize = 20 } = req.query;
 
     // Build filter object
     const filter = {};
@@ -44,7 +53,7 @@ router.get('/all_products', async (req, res) => {
 
     // Build sort object
     const sort = {};
-    if (sortBy) sort[sortBy] = 1; // 1 for ascending order, -1 for descending order
+    if (sortBy) sort[sortBy] = -1; // 1 for ascending order, -1 for descending order
 
     // Pagination options
     const options = {
@@ -75,8 +84,8 @@ router.get('/:id', async (req, res) => {
   }
 });
 
-router.put('/:id', auth, async (req, res) => {
-  const { name, category, price, quantity,  description } = req.body;
+router.put('/:id', auth, uploadProductImage, async (req, res) => {
+  const { name, category, price, quantity,  description, rating } = req.body;
 
   try {
     const productId = req.params.id;
@@ -90,7 +99,19 @@ router.put('/:id', auth, async (req, res) => {
     product.price = price || product.price
     product.quantity = quantity || product.quantity
     product.description = description || product.description
+
+    // Set the rating if provided and valid
+    if (rating !== undefined) {
+      if (rating >= 0 && rating <= 5) {
+        product.rating = rating;
+      } else {
+        return res.status(400).json({ msg: 'Rating must be between 0 and 5' });
+      }
+    }
     
+    if (req.file) {
+      product.image = `http://localhost:3001/uploads/products_images/${req.file.filename}`; // Save the uploaded image path
+    }
     await product.save();
 
     res.json(product);
@@ -102,11 +123,12 @@ router.put('/:id', auth, async (req, res) => {
 
 router.post('/add', uploadProductImage, async (req, res) => {
   try {
-    const { name, category, price, description, quantity } = req.body;
+    const { name, category, price, description, quantity, rating } = req.body;
 
-    let imageUrl = '';
-    if (req.file) {
-      imageUrl = `/uploads/products_images/${req.file.filename}`; // Save the file path for product image
+    const image = req.file ? `http://localhost:3001/uploads/products_images/${req.file.filename}` : null;
+
+    if (!name || !price || !category || !quantity || !description || !rating) {
+      return res.status(400).json({ error: 'All fields are required' });
     }
 
     // Check if the category exists
@@ -115,18 +137,37 @@ router.post('/add', uploadProductImage, async (req, res) => {
       return res.status(400).json({ msg: 'Category does not exist' });
     }
 
+    // Check if a product with the same name already exists in the same category
+    const existingProduct = await Product.findOne({ name, category });
+    if (existingProduct) {
+      return res.status(400).json({ error: `A product with the name "${name}" already exists in the "${category}" category.` });
+    }
+
+    let productRating = rating;
+
+    if (rating !== undefined) {
+      if (rating >= 0 && rating <= 5) {
+        productRating = rating;
+      } else {
+        return res.status(400).json({ msg: 'Rating must be between 0 and 5' });
+      }
+    }
+
     const newProduct = new Product({
       name,
       category,
       price,
       description,
       quantity,
-      image: imageUrl, // Save the image URL in the product model
+      image,
+      rating: productRating,
     });
-
+    console.log('product before save:', newProduct);
     await newProduct.save();
+    console.log('product after save:', newProduct);
     res.status(201).json({ message: 'Product added successfully', newProduct });
   } catch (error) {
+    console.error('Error adding product:', error);
     res.status(500).json({ error: 'Failed to add product' });
   }
 });
